--- a/hybrid-auth-server/.vscode/settings.json
+++ b/hybrid-auth-server/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "appService.defaultWebAppToDeploy": "/subscriptions/e9d37e16-dd67-45b0-bc53-ae64cbae738c/resourceGroups/appsvc_linux_centralus/providers/Microsoft.Web/sites/ilkkamtk-auth-server",
-  "appService.deploySubpath": "dist"
+  "appService.deploySubpath": "dist",
+  "liveServer.settings.port": 5501
 }
